[package]
name = "bench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
autobins = false

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
hdrhistogram = { workspace = true }
quinn = { path = "../quinn", features = ["ring"] }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "bulk"
path = "src/bin/bulk.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "throughput-client"
path = "src/bin/throughput_client.rs"

[[bin]]
name = "new-conn-client"
path = "src/bin/new_conn_client.rs"
